Fixing some spacing funkyness.

--- a/src/less/fontello.less
+++ b/src/less/fontello.less
@@ -5,14 +5,15 @@
        url('../font/fontello.woff?10023086') format('woff'),
        url('../font/fontello.ttf?10023086') format('truetype'),
        url('../font/fontello.svg?10023086#fontello') format('svg');
-  font-weight: normal;
+  font-weight: normal!important;
   font-style: normal;
+  -moz-osx-font-smoothing: grayscale;
 }
 
  [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "fontello";
   font-style: normal;
-  font-weight: normal;
+  font-weight: normal !important;
   speak: none;
   display: inline-block;
   text-decoration: inherit;
