--- a/src/less/home.less
+++ b/src/less/home.less
@@ -76,6 +76,7 @@ nav {
 .home {
 	.content { 
 		width: 450px;
+		padding-top: 2.5em;
 	}
 	.content-cap {}
 	h2 { 
