--- a/src/less/main.less
+++ b/src/less/main.less
@@ -14,6 +14,7 @@ body {
 	background-image: url('../img/noise.png');
 	padding: 0;
 	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 	font-size: 16px;	
 }
 
