--- a/src/less/portfolio.less
+++ b/src/less/portfolio.less
@@ -7,7 +7,7 @@
 	}
 	.note {
 		width: 90%;
-		margin: 1em auto;
+		margin: 1em auto 0 auto;
 	}
 }
 .entries {
